bugfix: SingleValue. Setting the title breaks the scrolling of the component.

--- a/eva/src/components/dashBoardInside/SingleValue/sass/dashSingleValue.sass
+++ b/eva/src/components/dashBoardInside/SingleValue/sass/dashSingleValue.sass
@@ -46,9 +46,14 @@ $dash-loading-height: 3px
   &.header-active
     @include container-height(35px)
 
+  &.is-header-open
+    @include container-height(0px)
+
   @media screen and (max-width: 1600px)
     &.header-active
       @include container-height(25px)
+    &.is-header-open
+    @include container-height(0px)
 
   .header
     display: flex
